--- a/index.html
+++ b/index.html
@@ -11,6 +11,31 @@
         <h1>navbar qismi</h1>
         <button class="login-btn">Login</button>
     </nav>
+    <main>
+        <div class="container">
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+            <div class="card">
+                <h1>card</h1>
+            </div>
+        </div>
+    </main>
 
   </body>
 </html>
